# kvstore

./: .gitmodules  CMakeLists.txt  README.txt
proto/: CMakeLists.txt  keyvalue.proto
src/: client.cpp  fifo_json_protobuf_server.cpp  fifo_json_server.cpp  fifo_protobuf_server.cpp  lru_json_protobuf_server.cpp  lru_json_server.cpp  lru_server.cpp  server.cpp  simple_server.cpp
src/common/: pistache_include.hpp
src/server/: cache.hpp  fifo_cache.hpp  fifo_cache.hpp.bac  full_cache.hpp  json_response.hpp  lru_cache.hpp  protobuf_swap.hpp  rest_server.hpp  simple_response.hpp  store.hpp  store_endpoint.hpp  store_response.hpp  swap.hpp
test/: fifo_cache_swap_test.cpp  fifo_cache_test.cpp  full_cache_test.cpp  gtest_include.hpp  lru_cache_swap_test.cpp  lru_cache_test.cpp  protobuf_swap_test.cpp  store_test.cpp  store_thread_safety_test.cpp  thread_test.cpp
